src/objects/CRMC_PP__Grid_Perm_Setting__c.object
<CustomObject>
    <description>Object to store Conga Grid Settings. (public so it&apos;s accessible via javascript.)</description>
    <fields>
        <fullName>CRMC_PP__JSON__c</fullName>
        <label>JSON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Owner_Label__c</fullName>
        <label>Owner Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Owner_Type__c</fullName>
        <label>Owner Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Setting_Name__c</fullName>
        <label>Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Setting_Type__c</fullName>
        <label>Setting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Table_Name__c</fullName>
        <label>Table Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conga Grid Setting</label>
    <nameField>
        <label>Conga Grid Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Grid Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>